tests/topconst_const_initializer_nonconst_unused_bad.hop
// Verifies topconst const initializer nonconst unused is rejected.
var X i32 = 1

const N = X

fn main() {}
